pkg/workloads/pihole/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
  annotations:
    metallb.io/address-pool: pool-external
  labels:
    app: pihole
spec:
  selector:
    app: pihole
  ports:
  - name: 53-53-udp
    nodePort: 30053
    port: 1054
    protocol: UDP
    targetPort: 1053
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-www
  namespace: pihole
  annotations:
    metallb.io/address-pool: pool-internal
  labels:
    app: pihole
spec:
  selector:
    app: pihole
  ports:
  - name: www
    port: 8091
    targetPort: 8090
    protocol: TCP
  type: LoadBalancer
